# game_jam

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  basicserialization  cmake_install.cmake  docsparser  echo  https  msvc2022.bat  run.sh
build_folder/: CMakeCache.txt
src/: debug_draw.cpp  debug_draw.h  main.cpp  main.h
